@@ -1160,6 +1160,7 @@ builder-definable tags.<br>
 "Prop_ReqPKill" makes this a place that only the bloodthirsty may enter.<br>
 "Prop_RestrictSpells" shuts down a list of spells that you provide.<br>
 "Prop_RoomDark" makes the whole area a place in need of light.<br>
+"Prop_RoomLit" makes the whole area lit, even at night.<br>
 "Prop_RoomForSale" puts this one little room on the market.<br>
 "Prop_RoomsForSale" designates that this room, and all others like it
 nearby, are for sale as a group.<br>
@@ -1519,6 +1520,7 @@ rooms.<br>
 "Prop_RestrictSpells" lets you limit specific skills or spells from
 being used here.<br>
 "Prop_RoomDark" makes the whole area a place in need of light.<br>
+"Prop_RoomLit" makes the whole area lit, even at night.<br>
 "Prop_RoomUnmappable" makes the whole area unmappable by mundane means.<br>
 "Prop_ReqEntry" lets you limit entry to folks by many different
 criteria.<br>
