@@ -1213,6 +1213,14 @@ Example    : \n\r\
 Description: \n\r\
 Makes a room dark, so that you need a light to see it. 
 
+PROP_ROOMLIT=\
+Property   : Prop_RoomLit\n\r\
+Targets    : Areas, Room\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Makes a room lit, even at night. 
+
 PROP_ROOMUNMAPPABLE=\
 Property   : Prop_RoomUnmappable\n\r\
 Targets    : Areas, Room\n\r\
